--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
             </div>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/joemarian" target="_blank">
+                <a href="https://www.linkedin.com/in/joemariana/" target="_blank">
                     <i class="fab fa-linkedin"></i> <!-- Font Awesome LinkedIn icon -->
                 </a>
                 <a href="https://github.com/joemarian" target="_blank">
